--- a/css/scss/common/_common.scss
+++ b/css/scss/common/_common.scss
@@ -289,6 +289,9 @@ main {
     i {
       font-size: 14px;
     }
+    &.outline-button {
+      min-width: unset;
+    }
   }
 
   //Feature Heading
