--- a/css/scss/components/_pay-online.scss
+++ b/css/scss/components/_pay-online.scss
@@ -157,6 +157,7 @@ Pay Online Page CSS End
   .online-item-section {
     padding-top: 0;
     .category-details {
+      border: 0;
       .single-unit {
         padding: 0;
         border: 0;
