--- a/css/scss/components/_unit-prices.scss
+++ b/css/scss/components/_unit-prices.scss
@@ -552,7 +552,6 @@ Unit Prices Page CSS End
   .unit-filter-section {
     .category-details {
       padding: 0;
-      border: 0;
       .single-unit {
         border-bottom: 1px solid #bfbfbf;
         border-top: 1px solid #bfbfbf;
@@ -582,29 +581,6 @@ Unit Prices Page CSS End
             }
           }
         }
-
-        .unit-price {
-          .price-div {
-            position: relative;
-            width: 100%;
-            h5 {
-              text-align: center;
-              width: 100%;
-              display: block;
-              &::before {
-                content: "";
-                position: absolute;
-                width: 100%;
-                height: 1px;
-                left: 0;
-                bottom: -10px;
-                background-color: $gray-border;
-              }
-            }
-          }
-        }
-        //Price information css end
-
         .store-unit-details {
           display: flex;
           justify-content: center;
@@ -642,16 +618,24 @@ Unit Prices Page CSS End
         justify-content: center;
         padding: 10px 0;
         background-color: transparent;
+        &.nav {
+          display: -webkit-box;
+          flex-wrap: initial;
+          align-items: center;
+          overflow-x: scroll;
+        }
         li {
           padding: 0px 10px;
+          display: inherit;
           a {
-            padding-left: 15px;
-            padding-right: 15px;
+            padding-left: 10px;
+            padding-right: 10px;
             padding-top: 5px;
             padding-bottom: 5px;
             border-radius: 5px;
-            font-size: 16px;
+            font-size: 14px;
             background-color: #f4f3ff;
+            display: inherit;
           }
         }
       }
