--- a/css/scss/components/_faqs.scss
+++ b/css/scss/components/_faqs.scss
@@ -40,7 +40,8 @@ FAQs Page CSS Start
     }
   }
   .accordion-button {
-    font-size: 24px;
+    padding: 20px;
+    font-size: 20px;
     font-weight: 500;
     background-color: #fffbf2;
     color: $black;
