--- a/css/scss/components/_feature.scss
+++ b/css/scss/components/_feature.scss
@@ -1,5 +1,36 @@
 /** == Feature Section CSS Start == **/
 .feature-section {
+  &.home-feature {
+    position: relative;
+    .mouse {
+      position: absolute;
+      bottom: 0;
+      width: 100%;
+      @keyframes example {
+        from {
+          top: 0px;
+        }
+
+        to {
+          top: 10px;
+        }
+      }
+      p {
+        i {
+          &.icon-mouse {
+            font-size: 24px;
+            transition: all 2s ease;
+            animation-name: example;
+            animation-duration: 1s;
+            animation-iteration-count: infinite;
+            animation-direction: alternate;
+            position: relative;
+            cursor: pointer;
+          }
+        }
+      }
+    }
+  }
   .single-feature {
     position: relative;
     padding: 60px 30px;
