--- a/css/scss/components/_home.scss
+++ b/css/scss/components/_home.scss
@@ -4,23 +4,19 @@ Home Page CSS Start
 
 /** == Banner Section CSS Start == **/
 .banner-section {
-  padding: 20px 15px;
+  padding: 100px 0;
+  background-image: linear-gradient(
+      180deg,
+      rgba(6, 6, 6, 0.5),
+      rgba(6, 6, 6, 0.5)
+    ),
+    url("../images/home/banner/banner.webp");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+  display: flex;
+  align-items: center;
   .container {
-    background-image: linear-gradient(
-        180deg,
-        rgba(6, 6, 6, 0.5),
-        rgba(6, 6, 6, 0.5)
-      ),
-      url("../images/home/banner/banner.webp");
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center center;
-    min-height: 700px;
-    display: flex;
-    align-items: center;
-    border-radius: 15px;
-    padding: 0 30px;
-
     .banner-content {
       margin: 0 auto;
       max-width: 1400px;
@@ -112,10 +108,7 @@ Home Page CSS End
 //Large Device CSS start
 @media (min-width: 0px) and (max-width: 1200px) {
   .banner-section {
-    padding: 20px 15px;
-    .container {
-      min-height: 600px;
-    }
+    padding: 80px 0;
   }
   .location-section {
     .storage-unit {
@@ -132,8 +125,8 @@ Home Page CSS End
 //Medium Device CSS start
 @media (min-width: 0px) and (max-width: 992px) {
   .banner-section {
+    padding: 60px 0;
     .container {
-      min-height: 500px;
       p {
         font-size: 20px;
       }
@@ -184,8 +177,8 @@ Home Page CSS End
 //Small Device CSS start
 @media (min-width: 0px) and (max-width: 768px) {
   .banner-section {
+    padding: 40px 0;
     .container {
-      min-height: 350px;
       p {
         margin-top: 5px;
         font-size: 18px;
@@ -201,9 +194,7 @@ Home Page CSS End
 //Extra Small or Mobile Device CSS start
 @media (min-width: 0px) and (max-width: 576px) {
   .banner-section {
-    padding: 15px 10px;
     .container {
-      padding: 40px 20px;
       min-height: unset;
       p {
         font-size: 14px;
