--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 @font-face {
   font-family: "icomoon";
-  src: url("../fonts/icomoon.eot?nwk0u6");
-  src: url("../fonts/icomoon.eot?nwk0u6#iefix") format("embedded-opentype"), url("../fonts/icomoon.woff2?nwk0u6") format("woff2"), url("../fonts/icomoon.ttf?nwk0u6") format("truetype"), url("../fonts/icomoon.woff?nwk0u6") format("woff"), url("../fonts/icomoon.svg?nwk0u6#icomoon") format("svg");
+  src: url("../fonts/icomoon.eot?gi6dmh");
+  src: url("../fonts/icomoon.eot?gi6dmh#iefix") format("embedded-opentype"), url("../fonts/icomoon.woff2?gi6dmh") format("woff2"), url("../fonts/icomoon.ttf?gi6dmh") format("truetype"), url("../fonts/icomoon.woff?gi6dmh") format("woff"), url("../fonts/icomoon.svg?gi6dmh#icomoon") format("svg");
   font-weight: normal;
   font-style: normal;
   font-display: block; }
@@ -39,6 +39,9 @@
 
 .icon-online-pay:before {
   content: "\e917"; }
+
+.icon-mouse:before {
+  content: "\e922"; }
 
 .icon-sorting:before {
   content: "\e90d"; }
@@ -139,27 +142,27 @@ body {
   max-width: 1280px; }
 
 h1 {
-  font-size: 96px; }
+  font-size: 64px; }
 
 h2 {
-  font-size: 80px;
+  font-size: 40px;
   font-weight: 700;
   color: white; }
 
 h3 {
-  font-size: 48px; }
+  font-size: 36px; }
 
 h4 {
-  font-size: 36px;
+  font-size: 28px;
   color: #0d0d0d; }
 
 h5 {
-  font-size: 32px;
+  font-size: 28px;
   font-weight: 700;
   color: #0601ff; }
 
 h6 {
-  font-size: 24px;
+  font-size: 20px;
   font-weight: 700;
   color: #0d0d0d; }
 
@@ -534,6 +537,26 @@ header {
           border-radius: 30px; } }
 /** ============================ Responsive CSS End ============================ **/
 /** == Feature Section CSS Start == **/
+.feature-section.home-feature {
+  position: relative; }
+  .feature-section.home-feature .mouse {
+    position: absolute;
+    bottom: 0;
+    width: 100%; }
+@keyframes example {
+  from {
+    top: 0px; }
+  to {
+    top: 10px; } }
+    .feature-section.home-feature .mouse p i.icon-mouse {
+      font-size: 24px;
+      transition: all 2s ease;
+      animation-name: example;
+      animation-duration: 1s;
+      animation-iteration-count: infinite;
+      animation-direction: alternate;
+      position: relative;
+      cursor: pointer; }
 .feature-section .single-feature {
   position: relative;
   padding: 60px 30px;
@@ -684,29 +707,25 @@ Home Page CSS Start
 ========================= **/
 /** == Banner Section CSS Start == **/
 .banner-section {
-  padding: 20px 15px; }
-  .banner-section .container {
-    background-image: linear-gradient(180deg, rgba(6, 6, 6, 0.5), rgba(6, 6, 6, 0.5)), url("../images/home/banner/banner.webp");
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center center;
-    min-height: 700px;
-    display: flex;
-    align-items: center;
-    border-radius: 15px;
-    padding: 0 30px; }
-    .banner-section .container .banner-content {
-      margin: 0 auto;
-      max-width: 1400px; }
-    .banner-section .container h1 {
-      font-weight: 700;
-      color: white; }
-    .banner-section .container p {
-      margin-top: 20px;
-      font-size: 20px;
-      color: white !important; }
-    .banner-section .container .cta-btn {
-      margin-top: 50px; }
+  padding: 100px 0;
+  background-image: linear-gradient(180deg, rgba(6, 6, 6, 0.5), rgba(6, 6, 6, 0.5)), url("../images/home/banner/banner.webp");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+  display: flex;
+  align-items: center; }
+  .banner-section .container .banner-content {
+    margin: 0 auto;
+    max-width: 1400px; }
+  .banner-section .container h1 {
+    font-weight: 700;
+    color: white; }
+  .banner-section .container p {
+    margin-top: 20px;
+    font-size: 20px;
+    color: white !important; }
+  .banner-section .container .cta-btn {
+    margin-top: 50px; }
 
 /** == Banner Section CSS End == **/
 /** == Location Section CSS Start == **/
@@ -758,15 +777,13 @@ Home Page CSS End
 /** ============================ Responsive CSS Start ============================ **/
 @media (min-width: 0px) and (max-width: 1200px) {
   .banner-section {
-    padding: 20px 15px; }
-    .banner-section .container {
-      min-height: 600px; }
+    padding: 80px 0; }
 
   .location-section .storage-unit .map-wrapper .map-content {
     padding: 50px 30px; } }
 @media (min-width: 0px) and (max-width: 992px) {
-  .banner-section .container {
-    min-height: 500px; }
+  .banner-section {
+    padding: 60px 0; }
     .banner-section .container p {
       font-size: 20px; }
 
@@ -790,21 +807,18 @@ Home Page CSS End
   .location-section .first-padding {
     padding: 20px 0; } }
 @media (min-width: 0px) and (max-width: 768px) {
-  .banner-section .container {
-    min-height: 350px; }
+  .banner-section {
+    padding: 40px 0; }
     .banner-section .container p {
       margin-top: 5px;
       font-size: 18px; }
     .banner-section .container .cta-btn {
       margin-top: 30px; } }
 @media (min-width: 0px) and (max-width: 576px) {
-  .banner-section {
-    padding: 15px 10px; }
-    .banner-section .container {
-      padding: 40px 20px;
-      min-height: unset; }
-      .banner-section .container p {
-        font-size: 14px; }
+  .banner-section .container {
+    min-height: unset; }
+    .banner-section .container p {
+      font-size: 14px; }
 
   .location-section .storage-unit .map-wrapper .one {
     top: -40px; }
@@ -1401,38 +1415,59 @@ Size Guide Page CSS Start
         @media screen and (max-width: 768px) {
           .storage-calculator-section .category ul li a {
             display: inherit; } }
-  .storage-calculator-section .category-details .single-unit {
-    padding: 0; }
-    .storage-calculator-section .category-details .single-unit p.common-pl {
-      padding-left: 0; }
-    .storage-calculator-section .category-details .single-unit .wrapper {
-      padding: 20px 0; }
-      .storage-calculator-section .category-details .single-unit .wrapper .store-size {
+  .storage-calculator-section .category-details {
+    overflow-y: auto;
+    height: 500px;
+    scrollbar-color: #0601ff #9d9d9d !important;
+    /* track thumb */
+    scrollbar-width: 10px !important;
+    /* none, thin, or auto */
+    /* Track */
+    /* Handle */
+    /* Handle on hover */ }
+    .storage-calculator-section .category-details::-webkit-scrollbar {
+      width: 5px !important; }
+    .storage-calculator-section .category-details::-webkit-scrollbar-track {
+      padding: 2px;
+      box-shadow: inset 0 0 5px #9d9d9d !important;
+      border-radius: 10px !important; }
+    .storage-calculator-section .category-details::-webkit-scrollbar-thumb {
+      background: #0601ff !important;
+      border-radius: 10px !important; }
+    .storage-calculator-section .category-details::-webkit-scrollbar-thumb:hover {
+      background: #0601ff !important; }
+    .storage-calculator-section .category-details .single-unit {
+      padding: 0; }
+      .storage-calculator-section .category-details .single-unit p.common-pl {
+        padding-left: 0; }
+      .storage-calculator-section .category-details .single-unit .wrapper {
+        padding: 20px 0; }
+        .storage-calculator-section .category-details .single-unit .wrapper .store-size {
+          display: flex;
+          align-items: center; }
+      .storage-calculator-section .category-details .single-unit .unit-price-count {
         display: flex;
-        align-items: center; }
-    .storage-calculator-section .category-details .single-unit .unit-price-count {
-      display: flex;
-      align-items: center;
-      justify-content: space-between; }
-      .storage-calculator-section .category-details .single-unit .unit-price-count .price-count .plus-minus {
-        margin-top: 8px; }
-        .storage-calculator-section .category-details .single-unit .unit-price-count .price-count .plus-minus a i {
-          font-size: 24px;
-          line-height: 0;
-          color: #0601ff; }
-      .storage-calculator-section .category-details .single-unit .unit-price-count .price-count .input-count input {
-        border: 1px solid #545454;
-        outline: none;
-        background-color: transparent;
-        color: #0d0d0d;
-        display: block;
-        max-width: 70px;
-        padding: 10px 10px;
-        border-radius: 4px;
-        text-align: center; }
-      .storage-calculator-section .category-details .single-unit .unit-price-count .refresh {
-        font-size: 16px;
-        font-weight: 500; }
+        align-items: center;
+        justify-content: space-between; }
+        .storage-calculator-section .category-details .single-unit .unit-price-count .price-count .plus-minus {
+          margin-top: 8px; }
+          .storage-calculator-section .category-details .single-unit .unit-price-count .price-count .plus-minus a i {
+            font-size: 24px;
+            line-height: 0;
+            color: #0601ff; }
+        .storage-calculator-section .category-details .single-unit .unit-price-count .price-count .input-count input {
+          border: 1px solid #545454;
+          outline: none;
+          background-color: transparent;
+          color: #0d0d0d;
+          display: block;
+          max-width: 70px;
+          padding: 10px 10px;
+          border-radius: 4px;
+          text-align: center; }
+        .storage-calculator-section .category-details .single-unit .unit-price-count .refresh {
+          font-size: 16px;
+          font-weight: 500; }
   .storage-calculator-section .bed-room-content {
     padding: 20px;
     border-top: 1px solid #bfbfbf;
@@ -1669,7 +1704,8 @@ FAQs Page CSS Start
     background-image: url("../images/faqs/content/minus.svg");
     background-size: 20px; }
 .faqs-section .accordion-button {
-  font-size: 24px;
+  padding: 20px;
+  font-size: 20px;
   font-weight: 500;
   background-color: #fffbf2;
   color: #0d0d0d; }
