--- a/css/scss/common/_common.scss
+++ b/css/scss/common/_common.scss
@@ -85,6 +85,7 @@ ul {
   text-align: center;
   transition: all 0.3s;
   cursor: pointer;
+  display: inline-block;
   i {
     margin-right: 15px;
     font-size: 20px;
