--- a/css/scss/components/_contact-us.scss
+++ b/css/scss/components/_contact-us.scss
@@ -5,15 +5,13 @@ Contact Us Page CSS Start
 /** == Banner Section CSS Start == **/
 .banner-section {
   &.contact-us-banner {
-    .container {
-      min-height: 320px;
-      background-image: linear-gradient(
-          180deg,
-          rgba(6, 6, 6, 0.5),
-          rgba(6, 6, 6, 0.5)
-        ),
-        url("../images/contact-us/banner/banner.webp");
-    }
+    padding: 60px 0;
+    background-image: linear-gradient(
+        180deg,
+        rgba(6, 6, 6, 0.5),
+        rgba(6, 6, 6, 0.5)
+      ),
+      url("../images/contact-us/banner/banner.webp");
   }
 }
 /** == Banner Section CSS End == **/
@@ -73,15 +71,6 @@ Contact Us Page CSS End
 
 //Large Device CSS start
 @media (min-width: 0px) and (max-width: 1200px) {
-  .banner-section {
-    &.nearby-banner {
-      .container {
-        min-height: 450px;
-      }
-    }
-  }
-  //Banner Section CSS End
-
   .contact-form-section {
     .contact-form {
       padding: 30px;
@@ -107,15 +96,6 @@ Contact Us Page CSS End
 
 //Medium Device CSS start
 @media (min-width: 0px) and (max-width: 992px) {
-  .banner-section {
-    &.nearby-banner {
-      .container {
-        min-height: 400px;
-      }
-    }
-  }
-  //Banner Section CSS End
-
   .contact-form-section {
     .contact-form {
       padding: 30px 15px;
@@ -153,9 +133,7 @@ Contact Us Page CSS End
 @media (min-width: 0px) and (max-width: 768px) {
   .banner-section {
     &.nearby-banner {
-      .container {
-        min-height: 350px;
-      }
+      padding: 40px 0;
     }
   }
   //Banner Section CSS End
@@ -190,15 +168,6 @@ Contact Us Page CSS End
 
 //Small Device CSS start
 @media (min-width: 0px) and (max-width: 576px) {
-  .banner-section {
-    &.nearby-banner {
-      .container {
-        min-height: unset;
-        padding: 40px 20px;
-      }
-    }
-  }
-  //Banner Section CSS End
 }
 
 /** ============================ Responsive CSS End ============================ **/
