--- a/css/scss/components/_pay-online.scss
+++ b/css/scss/components/_pay-online.scss
@@ -5,15 +5,13 @@ Pay Online Page CSS Start
 /** == Banner Section CSS Start == **/
 .banner-section {
   &.pay-online-banner {
-    .container {
-      min-height: 320px;
-      background-image: linear-gradient(
-          180deg,
-          rgba(6, 6, 6, 0.5),
-          rgba(6, 6, 6, 0.5)
-        ),
-        url("../images/pay-online/banner/banner.webp");
-    }
+    padding: 60px;
+    background-image: linear-gradient(
+        180deg,
+        rgba(6, 6, 6, 0.5),
+        rgba(6, 6, 6, 0.5)
+      ),
+      url("../images/pay-online/banner/banner.webp");
   }
 }
 /** == Banner Section CSS End == **/
@@ -79,27 +77,10 @@ Pay Online Page CSS End
 
 //Large Device CSS start
 @media (min-width: 0px) and (max-width: 1200px) {
-  .banner-section {
-    &.pay-online-banner {
-      .container {
-        min-height: 450px;
-      }
-    }
-  }
-  //Banner Section CSS End
 }
 
 //Medium Device CSS start
 @media (min-width: 0px) and (max-width: 992px) {
-  .banner-section {
-    &.pay-online-banner {
-      .container {
-        min-height: 400px;
-      }
-    }
-  }
-  //Banner Section CSS End
-
   .online-item-section {
     padding-top: 0;
     .category-details {
@@ -147,9 +128,7 @@ Pay Online Page CSS End
 @media (min-width: 0px) and (max-width: 768px) {
   .banner-section {
     &.pay-online-banner {
-      .container {
-        min-height: 350px;
-      }
+      padding: 40px 0;
     }
   }
   //Banner Section CSS End
@@ -238,15 +217,6 @@ Pay Online Page CSS End
 
 //Small Device CSS start
 @media (min-width: 0px) and (max-width: 576px) {
-  .banner-section {
-    &.pay-online-banner {
-      .container {
-        min-height: unset;
-        padding: 40px 20px;
-      }
-    }
-  }
-  //Banner Section CSS End
 }
 
 /** ============================ Responsive CSS End ============================ **/
