--- a/css/scss/components/_unit-prices.scss
+++ b/css/scss/components/_unit-prices.scss
@@ -5,15 +5,13 @@ Unit Prices Page CSS Start
 /** == Banner Section CSS Start == **/
 .banner-section {
   &.unit-prices-banner {
-    .container {
-      min-height: 600px;
-      background-image: linear-gradient(
-          180deg,
-          rgba(6, 6, 6, 0.5),
-          rgba(6, 6, 6, 0.5)
-        ),
-        url("../images/unit-prices/banner/unit-price-banner.webp");
-    }
+    padding: 60px 0;
+    background-image: linear-gradient(
+        180deg,
+        rgba(6, 6, 6, 0.5),
+        rgba(6, 6, 6, 0.5)
+      ),
+      url("../images/unit-prices/banner/unit-price-banner.webp");
   }
 }
 /** == Banner Section CSS End == **/
@@ -118,7 +116,6 @@ Unit Prices Page CSS Start
     padding: 0 30px;
     border: 1px solid $gray-border;
     border-radius: 8px;
-
 
     .single-unit {
       padding: 20px 0;
@@ -445,15 +442,6 @@ Unit Prices Page CSS End
 
 //Large Device CSS start
 @media (min-width: 0px) and (max-width: 1200px) {
-  .banner-section {
-    &.unit-prices-banner {
-      .container {
-        min-height: 450px;
-      }
-    }
-  }
-  //Banner Section CSS End
-
   .office-time-section {
     .office-time {
       padding: 0 40px;
@@ -474,7 +462,6 @@ Unit Prices Page CSS End
   .banner-section {
     &.unit-prices-banner {
       .container {
-        min-height: 400px;
       }
     }
   }
@@ -528,9 +515,7 @@ Unit Prices Page CSS End
 @media (min-width: 0px) and (max-width: 768px) {
   .banner-section {
     &.unit-prices-banner {
-      .container {
-        min-height: 350px;
-      }
+      padding: 40px 0;
     }
   }
   //Banner Section CSS End
@@ -784,10 +769,7 @@ Unit Prices Page CSS End
 @media (min-width: 0px) and (max-width: 576px) {
   .banner-section {
     &.unit-prices-banner {
-      .container {
-        min-height: unset;
-        padding: 40px 20px;
-      }
+      padding: 40px 0;
     }
   }
   //Banner Section CSS End
